# ChangeLog for dev-python/flake8
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 May 2012; James Rowe <jnrowe@gmail.com> -flake8-1.2.ebuild,
  flake8-1.3.ebuild:
  Keyworded x86.

  07 May 2012; James Rowe <jnrowe@gmail.com> flake8-1.3.ebuild:
  Keyworded amd64.

  18 Apr 2012; James Rowe <jnrowe@gmail.com> -flake8-1.1.ebuild,
  flake8-1.2.ebuild:
  Keyworded x86.

  18 Apr 2012; James Rowe <jnrowe@gmail.com> flake8-1.2.ebuild:
  Keyworded amd64.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> flake8-1.2.ebuild,
  flake8-1.3.ebuild:
  [QA] Remove useless comment.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> flake8-1.1.ebuild,
  flake8-1.2.ebuild, flake8-1.3.ebuild:
  Use distutils.eclass via jnrowe-pypi.

*flake8-1.3 (07 Apr 2012)

  07 Apr 2012; James Rowe <jnrowe@gmail.com> +flake8-1.3.ebuild:
  Version bump [581].

  26 Mar 2012; James Rowe <jnrowe@gmail.com> -flake8-1.0.ebuild,
  flake8-1.1.ebuild:
  Keyworded x86.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> flake8-1.1.ebuild:
  Keyworded amd64.

*flake8-1.2 (19 Mar 2012)

  19 Mar 2012; James Rowe <jnrowe@gmail.com> +flake8-1.2.ebuild:
  Version bump [573].

  19 Mar 2012; James Rowe <jnrowe@gmail.com> flake8-1.0.ebuild,
  flake8-1.1.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> flake8-1.0.ebuild,
  flake8-1.1.ebuild:
  Removed Python 2.4 support.

*flake8-1.1 (25 Feb 2012)

  25 Feb 2012; James Rowe <jnrowe@gmail.com> +flake8-1.1.ebuild:
  Version bump [558].

  20 Jan 2012; James Rowe <jnrowe@gmail.com> flake8-1.0.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> flake8-1.0.ebuild:
  Keyworded amd64.

*flake8-1.0 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +flake8-1.0.ebuild, +metadata.xml,
  +watch:
  Initial ebuild, by me [512].
