@@ -1,11 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
+DIST flake8-1.3.1.tar.gz 30206 RMD160 5f72a9dc372b4378fa6b5a3def22848641e0698b SHA1 a25eac1134b212c115a50d229c54aa06f44a712a SHA256 5c2a7e827aee3c8f6512deecadb07cc2b74413a54e030a02eccd17682cfd760d
 DIST flake8-1.3.tar.gz 30201 RMD160 80f7e0481170d0ccb00f2762fa58a60c9d48059d SHA1 e192a9bb2634f57f31816e4eeeb6979c05ef745e SHA256 f5d60ccd64ae9b50514013dc8abff4524aba8a4df5d9310cba846eb9fd5c5435
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk+nKn0ACgkQzJrj3cAXR0lJuwCcDaE5+I3j4uKmReRpvGWO9z4J
-3hYAoK7Szc5kEkrMwTE1GVUfR38pdC9K
-=5Ywx
+iEYEAREKAAYFAk/GhccACgkQzJrj3cAXR0mdsACgiaU+9Nct2t9mXkqtR4UtllIN
+PzgAoLlfviCPGtpmHQvIA2OZbzSXdaA3
+=C/Hg
 -----END PGP SIGNATURE-----
