@@ -4,10 +4,10 @@ DESCRIPTION=Python code checking using pep8 and pyflakes
 EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/flake8/
 IUSE=test
-KEYWORDS=amd64 x86
+KEYWORDS=~amd64 ~x86
 LICENSE=MIT
 RDEPEND=|| ( =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-2.7* =dev-lang/python-2.6* )
 SLOT=0
-SRC_URI=mirror://pypi/f/flake8/flake8-1.3.tar.gz
+SRC_URI=mirror://pypi/f/flake8/flake8-1.3.1.tar.gz
 _eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	a95b1bf9d854485ca6fdbb47df2975aa	jnrowe-pypi	686cf6e0feaf26499041ad17392c3774	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	f71b9936acc911ed1cc84557d3b5c2b3	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=6ef23c5ec1b0381d76069b3abc32f10e
+_md5_=51ec361b2e3ae6fbad5d7ced5a8e0398
