@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*flake8-1.3.1 (30 May 2012)
+
+  30 May 2012; James Rowe <jnrowe@gmail.com> +flake8-1.3.1.ebuild:
+  Version bump [605].
+
   07 May 2012; James Rowe <jnrowe@gmail.com> -flake8-1.2.ebuild,
   flake8-1.3.ebuild:
   Keyworded x86.
